fixed poor wrapping cards on about page

--- a/components/ContentContainer/ui/ContentContainer.module.css
+++ b/components/ContentContainer/ui/ContentContainer.module.css
@@ -1,15 +1,17 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 0.5rem;
+    grid-gap: 1%;
     align-content: center;
     justify-content: center;
 }
 
 .grid > * {
-    min-width: min-content;
+    min-width: 360px;
+    max-width: 512px;
     flex-grow: 1;
     flex-basis: 0;
+
 }
 
 .title {
@@ -32,10 +34,14 @@
 
 .icon {
     margin: auto;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .info {
     display: grid;
     grid-template-columns: 80% 20%;
+}
+
+.container {
+    align-self: end;
 }
